# Deep_repro

./: .gitignore  README.md  TODO.md  evaluate.py  pyproject.toml  pyproject_for_ancient.toml  testing_cnn_mnist_on_cpu.ipynb  train.py  train_hpo.py
conf/: cnn_hpo.yaml  config.yaml  eval.yaml  mlp_hpo.yaml
conf/data/: data.yaml  data_2d.yaml
conf/model/: cnn.yaml  mlp.yaml
conf/training/: training.yaml
dataops/: dataobject.py  exploring_data.ipynb  pretraitment.py
engine/: trainer.py
models/: mnist_cnn.py  mnist_mlp.py
