[project]
name = "deep-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "liac-arff>=2.5.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
